--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
         function downloadClient(platform) {
             // 这里可以替换为实际的下载链接
             const downloadLinks = {
-                windows: 'https://launcher.mojang.com/download/Minecraft.exe',
+                windows: 'https://lao2010.github.io/LHJ服务器 3.0.zip',
                 linux: 'https://launcher.mojang.com/download/minecraft-launcher.tar.gz',
                 android: 'https://play.google.com/store/apps/details?id=com.mojang.minecraftpe'
             };
